--- a/src/components/Movie/moviedetails.css
+++ b/src/components/Movie/moviedetails.css
@@ -7,7 +7,13 @@
 }
 .movieTitle {
     color: #fa6c85;
+    display: inline-block;
 }
 .movieDesc {
     font-size: 1rem;
+}
+.avgRating {
+    border: 1px solid white;
+    border-radius: 30px;
+    padding: 3px 9px;
 }
